<resources>
    <string name="app_name">Welcome!</string>
    <string name="app_login">로그인</string>
    <string name="app_signin">회원가입</string>
    <string name="app_mainmenu">메인메뉴</string>
    <string name="app_talk">단체 톡방</string>
    <string name="app_membership">회비관리</string>
    <string name="app_new_membership">회비톡방생성</string>
    <string name="app_new_daily">데일리톡방생성</string>
    <string name="app_new_friend">친구 추가</string>

    <string name="text_signin">회원가입</string>

    <string name="btn_overlap">ID중복확인</string>
    <string name="btn_identify">민증확인</string>
    <string name="btn_signin">회원가입</string>
    <string name="btn_login">로그인</string>
    <string name="btn_email">email확인</string>

    <string name="hint_name">이름 입력</string>
    <string name="hint_id">ID 입력</string>
    <string name="hint_pw">PW 입력</string>
    <string name="hint_Checkpw">PW 확인</string>
    <string name="hint_email">EMAIL 입력</string>
    <string name="hint_accnum">계좌번호 입력</string>
    <string name="hint_acc">잔고 입력</string>
    <string name="hint_bankpw">계좌비밀번호 입력</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_view2">View2Activity</string>

</resources>
