<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TV_signIn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signin"
        android:layout_margin="10sp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_below="@+id/TV_signIn"
        android:id="@+id/LL_signIn_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textName"
            style="@style/CustomTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/sidecustom_round"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="text" />

        <Button
            android:id="@+id/identify"
            style="@style/CustomButton"
            android:text="@string/btn_identify" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/LL_signIn_name"
        android:id="@+id/LL_signIn_id"
        android:layout_margin="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textID"
            style="@style/CustomTextView"
            android:background="@drawable/sidecustom_round"
            android:layout_weight="1"
            android:hint="@string/hint_id"
            android:inputType="text" />

        <Button
            android:id="@+id/overlap"
            style="@style/CustomButton"
            android:text="@string/btn_overlap" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/LL_signIn_id"
        android:id="@+id/LL_signIn_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/textPW"
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:background="@drawable/sidecustom_round"
            android:hint="@string/hint_pw"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/textCheckPW"
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:background="@drawable/sidecustom_round"
            android:hint="@string/hint_Checkpw"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="5sp"
        android:layout_below="@+id/LL_signIn_pw"
        android:id="@+id/LL_signIn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textEmail"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sidecustom_round"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\@"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/email_type"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:background="@drawable/sidecustom"
            android:dropDownWidth="250dp" />
        <Button
            android:id="@+id/emailCheck"
            style="@style/CustomButton"
            android:layout_gravity="center"
            android:text="@string/btn_email" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/LL_signIn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textAccountNum"
                style="@style/CustomTextView"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sidecustom_round"
                android:hint="@string/hint_accnum"
                android:inputType="text" />

            <Spinner
                android:id="@+id/bank_type"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:background="@drawable/sidecustom"
                android:dropDownWidth="150dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/textAccountPW"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sidecustom_round"
            android:hint="@string/hint_bankpw"
            android:inputType="numberPassword" />
    </LinearLayout>

</RelativeLayout>