<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kr.hongik.mnms.firstscreen.MainActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="70dp"
        app:srcCompat="@drawable/logo_image_dog" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id"
            style="@style/CustomTextView"
            android:background="@drawable/sidecustom_round"
            android:ems="10"
            android:hint="@string/hint_id"
            android:textColorHint="@android:color/holo_red_light"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pw"
            style="@style/CustomTextView"
            android:ems="10"
            android:hint="@string/hint_pw"
            android:background="@drawable/sidecustom_round"
            android:textColorHint="@android:color/holo_red_light"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id"
            app:layout_constraintVertical_bias="0.01999998" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            style="@style/CustomButton"
            android:layout_marginRight="5dp"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/signin"
            style="@style/CustomButton"
            android:layout_marginLeft="5dp"
            android:text="@string/btn_signin" />
        <CheckBox
            android:id="@+id/autoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="자동로그인"
            android:paddingRight="5dp"
            android:background="@drawable/sidecustom_round"
            android:buttonTint="@android:color/holo_red_light"
            />

    </LinearLayout>

</LinearLayout>